--- a/Duplex_Sincrona/duplex_sincrona/tbSincrono_summary.html
+++ b/Duplex_Sincrona/duplex_sincrona/tbSincrono_summary.html
@@ -72,9 +72,9 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Augusto/Documents/GitHub/Arq2-Dados/Duplex_Sincrona/duplex_sincrona\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>sex 25. mar 20:23:49 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Augusto/Documents/GitHub/Arq2-Dados/Duplex_Sincrona/duplex_sincrona\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>sáb 26. mar 01:21:50 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/25/2016 - 23:43:21</center>
+<br><center><b>Date Generated:</b> 04/01/2016 - 16:16:41</center>
 </BODY></HTML>
